--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,6 @@ spring.datasource.username=root
 spring.datasource.password=1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql: true
-spring.mvc.contentnegotiation.defaultContentType=application/json
+spring.main.lazy-initialization=true
 logging.level.org.springframework.security=DEBUG
 
