--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
     <description>SpringProject</description>
     <properties>
         <java.version>11</java.version>
+        <cache2k-version>2.6.1.Final</cache2k-version>
+
     </properties>
     <dependencies>
         <dependency>
@@ -80,6 +82,26 @@
             <artifactId>validation-api</artifactId>
             <version>2.0.1.Final</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.cache2k</groupId>
+            <artifactId>cache2k-api</artifactId>
+            <version>2.6.1.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>org.cache2k</groupId>
+            <artifactId>cache2k-core</artifactId>
+            <version>2.6.1.Final</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.cache2k</groupId>
+            <artifactId>cache2k-spring</artifactId>
+            <version>2.6.1.Final</version>
+        </dependency>
+
+
+
     </dependencies>
 
     <build>
