--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,9 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql: true
 spring.main.lazy-initialization=true
 logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.cache = info
+
+
+
+
 
